# dascoli-word-decoding

./: .gitignore  .pre-commit-config.yaml  README.md  README_ORIGINAL.md
neuralset/: .gitignore  README.md  pyproject.toml
neuralset/examples/: allen2022.py  contier2022.py  courtois2023.py  example_nastase2020.py  grootswagers2022.py  gwilliams2022.py  wen2017.py  zhou2023_optflow.py
neuralset/neuralset/: __init__.py  base.py  data.py  dataloader.py  download.py  enhancers.py  events.py  helpers.py  pipelines.py  segments.py  splitting.py  test_base.py  test_data.py  test_dataloader.py  test_enhancers.py  test_events.py  test_pipelines.py  test_segments.py  test_splitting.py  test_utils.py  utils.py
neuralset/neuralset/experimental/: __init__.py  segments.py
neuralset/neuralset/experimental/features/: image.py  test_features.py  torchhub.py  video.py
neuralset/neuralset/features/: __init__.py  audio.py  base.py  image.py  neuro.py  test_audio.py  test_base.py  test_image.py  test_neuro.py  test_text.py  test_video.py  text.py  video.py
neuralset/neuralset/infra/: __init__.py  base.py  confdict.py  map.py  slurm.py  task.py  test_workdir.py  utils.py
neuralset/neuralset/studies/: accou2023.py  allen2022beta.py  allen2022bold.py  armeni2022.py  babayan2019.py  brennan2019.py  broderick2019.py  chang2019.py  contier2022.py  courtois2023.py  ctrllabs2024.py  ghassemi2018.py  gifford2021.py  grootswagers2022.py  grootswagers2024.py  gwilliams2022.py  hebart2023.py  hebart2023bold.py  kemp2000.py  khan2022.py  lebel2023bold.py  li2022.py  libribrain100.py  luke2021.py  mnesample2013.py  moabb.py  nastase2020.py  nieuwland2018.py  pallier2023.py  pinet2024.py  schalk2009.py  schirrmeister2017.py  schoffelen2019.py  shen2020.py  singer2023bold.py  singer2023meg.py  test_studies.py  test_utils.py  testfmri2023.py  testfnirs2024.py  (+7 more)
neuraltrain/: README.md  pyproject.toml
neuraltrain/neuraltrain/: test_utils.py  utils.py
neuraltrain/neuraltrain/augmentations/: __init__.py  augmentations.py  test_augmentations.py
neuraltrain/neuraltrain/losses/: __init__.py  base.py  losses.py  test_config.py  test_losses.py
neuraltrain/neuraltrain/metrics/: __init__.py  base.py  metrics.py  test_config.py  test_metrics.py  test_utils.py  utils.py
neuraltrain/neuraltrain/models/: __init__.py  base.py  biot.py  common.py  eegnet.py  fmri_mlp.py  linear.py  simpleconv.py  test_biot.py  test_common.py  test_eegnet.py  test_fmri_mlp.py  test_simpleconv.py  test_transformer.py  transformer.py
neuraltrain/neuraltrain/optimizers/: __init__.py  base.py  test_config.py
neuraltrain/project_example/: README.md  main.py  pl_module.py  plot_figure.py
neuraltrain/project_example/grids/: defaults.py  run_grid.py  test_run.py
sentence_decoding/: alignment.py  callbacks.py  decoder.py  main.py  pl_module.py  test_utils.py  utils.py
sentence_decoding/grids/: ablation_duration.py  ablation_eegnet.py  ablation_llm.py  ablation_loss.py  ablation_offset.py  defaults.py  final.py  final_align.py  libribrain100.py  test.py
